setting develop envirement

--- a/inapptoss/app/build.gradle
+++ b/inapptoss/app/build.gradle
@@ -1,15 +1,16 @@
 plugins {
-    alias(libs.plugins.android.application)
+    // This applies the Android Application plugin to this specific module.
+    id 'com.android.application'
 }
 
 android {
     namespace 'com.example.inapptoss'
-    compileSdk 36
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.inapptoss"
         minSdk 24
-        targetSdk 36
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -23,18 +24,23 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildFeatures {
+        viewBinding false
     }
 }
 
 dependencies {
+    // Core Android dependencies needed for MainActivity
+    implementation 'androidx.appcompat:appcompat:1.7.0'
 
-    implementation libs.appcompat
-    implementation libs.material
-    implementation libs.activity
-    implementation libs.constraintlayout
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
+    // Add this line to include the Material Components library
+    implementation libs.material // This line uses the version from your libs.versions.toml
+
+    // Testing dependencies
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
